--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>bada24</title>
   </head>
   <body>
+    <header>
       <h1>Aiutiamo le persone a trovare e gestire badanti di fiducia.</h1>
+    </header>
+
+    <footer>
+      <p>Progetto pensato da Filippo Fresilli per aiutare la nonna.</p>
+    </footer>
   </body>
 </html>
