modified body and footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <title>bada24</title>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     <main role="main">
       <div class="container">
         <h1>bada24</h1>
@@ -26,9 +26,11 @@
     </main>
 
     <footer class="footer mt-auto py-3">
-      <span class="text-muted"
-        >Progetto pensato da Filippo Fresilli per aiutare la nonna.</span
-      >
+      <div class="container">
+        <span class="text-muted">
+          Progetto pensato da Filippo Fresilli per aiutare la nonna.
+          </span>
+      </div>
     </footer>
 
     <!-- Optional JavaScript -->
