--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <!--====== Title ======-->
+    <title>bada24</title>
+    <meta
+      name="description"
+      content="Bada24, servizio per la ricerca e la gestione delle badanti."
+    />
+
+    <!--====== Favicon Icon ======-->
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.png"
+      type="image/png"
+    />
+    <!--====== Style CSS ======-->
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -14,8 +30,6 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-
-    <title>bada24</title>
   </head>
   <body class="d-flex flex-column h-100">
     <main role="main">
@@ -29,7 +43,7 @@
       <div class="container">
         <span class="text-muted">
           Progetto pensato da Filippo Fresilli per aiutare la nonna.
-          </span>
+        </span>
       </div>
     </footer>
 
