--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   </head>
   <body class="d-flex flex-column h-100">
     <main role="main">
-      <div class="container">
+      <div class="container text-center">
         <h1>bada24</h1>
         <h2>Aiutiamo le persone a trovare e gestire badanti di fiducia.</h2>
       </div>
     </main>
 
     <footer class="footer mt-auto py-3">
-      <div class="container">
+      <div class="container text-center">
         <span class="text-muted">
           Progetto pensato da Filippo Fresilli per aiutare la nonna.
         </span>
