--- a/index.html
+++ b/index.html
@@ -31,38 +31,53 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="d-flex flex-column h-100">
-    <main role="main">
-      <div class="container text-center">
-        <h1>bada24</h1>
-        <h2>Aiutiamo le persone a trovare e gestire badanti di fiducia.</h2>
-      </div>
-    </main>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-    <footer class="footer mt-auto py-3">
-      <div class="container text-center">
-        <span class="text-muted">
-          Progetto pensato da Filippo Fresilli per aiutare la nonna.
-        </span>
-      </div>
-    </footer>
+    <header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand">bada24</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="#">Cliente</a>
+            <a class="nav-link" href="#">Badante</a>
+          </nav>
+        </div>
+      </header>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading">bada24</h1>
+        <p class="lead">
+          Aiutiamo le persone a trovare e gestire badanti di fiducia.
+        </p>
+      </main>
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <span
+            >Progetto pensato da
+            <a href="https://linktr.ee/filippofresilli" target="_blank">Filippo Fresilli</a> per aiutare
+            la nonna.</span
+          >
+        </div>
+      </footer>
+
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script
+        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"
+      ></script>
+    </div>
   </body>
 </html>
