added badante page

--- a/badante.html
+++ b/badante.html
@@ -38,8 +38,8 @@
         <div class="inner">
           <h3 class="masthead-brand">bada24</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Cliente</a>
-            <a class="nav-link" href="badante.html">Badante</a>
+            <a class="nav-link" href="index.html">Cliente</a>
+            <a class="nav-link active" href="badante.html">Badante</a>
           </nav>
         </div>
       </header>
@@ -47,7 +47,7 @@
       <main role="main" class="inner cover">
         <h1 class="cover-heading">bada24</h1>
         <p class="lead">
-          Aiutiamo le persone a trovare e gestire badanti di fiducia.
+          Aiutiamo i badanti a trovare e gestire persone bisognose.
         </p>
       </main>
 
