--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="text-center">
+  <body class="text-center bg-image">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
     <header class="masthead mb-auto">
