--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="inner">
           <h3 class="masthead-brand">bada24</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Cliente</a>
+            <a class="nav-link active" href="#">Paziente</a>
             <a class="nav-link" href="badante.html">Badante</a>
           </nav>
         </div>
