--- a/badante.html
+++ b/badante.html
@@ -47,7 +47,7 @@
       <main role="main" class="inner cover">
         <h1 class="cover-heading">bada24</h1>
         <p class="lead">
-          Aiutiamo i badanti a trovare e gestire persone bisognose.
+          Aiutiamo i badanti a trovare e gestire persone bisognose di assistenza.
         </p>
       </main>
 
