--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>bada24</title>
     <meta
       name="description"
-      content="Bada24, servizio per la ricerca e la gestione delle badanti."
+      content="Bada24, assistente digitale per la ricerca e la gestione delle badanti."
     />
 
     <!--====== Favicon Icon ======-->
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="text-center bg-image">
+  <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
     <header class="masthead mb-auto">
