--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
-    <header class="masthead mb-auto">
+  <body class="">
+    <div
+      class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column justify-content-center"
+    >
+      <!-- <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">bada24</h3>
           <nav class="nav nav-masthead justify-content-center">
@@ -42,24 +43,95 @@
             <a class="nav-link" href="badante.html">Badante</a>
           </nav>
         </div>
-      </header>
+      </header> -->
 
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">bada24</h1>
-        <p class="lead">
-          Aiutiamo le persone a trovare e gestire badanti di fiducia.
-        </p>
+      <main role="main" class="inner cover d-flex align-items-center">
+        <div class="p-3">
+          <h1 class="cover-heading">bada24</h1>
+          <p class="lead">
+            Bada24 è l'assistente digitale per badanti, anziani e familiari.
+          </p>
+        </div>
+        <form
+          class="card"
+          action="https://formspree.io/f/mdopplgb"
+          method="post"
+        >
+          <div class="card-body">
+            <!-- <h5 class="card-title">bada24</h5> -->
+            <div class="row form-group">
+              <div class="col pr-0">
+                <input
+                  type="text"
+                  name="Name"
+                  class="form-control"
+                  placeholder="Nome"
+                />
+              </div>
+              <div class="col">
+                <input
+                  type="text"
+                  name="Surname"
+                  class="form-control"
+                  placeholder="Cognome"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <!-- <label for="exampleInputEmail1">Indirizzo Email</label> -->
+              <input
+                name="Email"
+                id="email"
+                type="email"
+                class="form-control"
+                aria-describedby="emailHelp"
+                placeholder="La tua email*"
+                required
+              />
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="Opzione"
+                id="exampleRadios1"
+                value="badatario"
+                checked
+              />
+              <label class="form-check-label" for="exampleRadios1">
+                Ho bisogno di un/a badante.
+              </label>
+            </div>
+            <div class="form-check form-group">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="Opzione"
+                id="exampleRadios2"
+                value="badante"
+              />
+              <label class="form-check-label" for="exampleRadios2">
+                Sono badante.
+              </label>
+            </div>
+            <button type="submit" class="btn btn-block btn-primary">
+              Iscriviti
+            </button>
+          </div>
+        </form>
       </main>
 
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
+      <!-- <footer class="mastfoot mt-auto">
+        <div class="inner text-center">
           <span
             >Progetto pensato da
-            <a href="https://linktr.ee/filippofresilli" target="_blank">Filippo Fresilli</a> per aiutare
-            la nonna.</span
+            <a href="https://linktr.ee/filippofresilli" target="_blank"
+              >Filippo Fresilli</a
+            >
+            per aiutare la nonna.</span
           >
         </div>
-      </footer>
+      </footer> -->
 
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
