--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <meta name="author" content="Filippo Fresilli">
+    <meta name="copyright" content="Filippo Fresilli">
+
     <!--====== Title ======-->
     <title>bada24</title>
     <meta
@@ -20,8 +23,6 @@
       href="assets/images/favicon.png"
       type="image/png"
     />
-    <!--====== Style CSS ======-->
-    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Bootstrap -->
     <link
@@ -30,6 +31,9 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+
+     <!--====== Style CSS ======-->
+     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body class="">
     <div
@@ -48,23 +52,24 @@
       <main role="main" class="inner cover d-flex align-items-center">
         <div class="p-3">
           <h1 class="cover-heading">bada24</h1>
+          <h4>Bada24 è l'assistente digitale per badanti, anziani e familiari.</h4>
           <p class="lead">
             Bada24 è l'assistente digitale per badanti, anziani e familiari.
           </p>
         </div>
         <form
-          class="card"
+          class="card border-color-d-blue"
           action="https://formspree.io/f/mdopplgb"
           method="post"
         >
-          <div class="card-body">
+          <div class="card-body bg-color-card border-color-d-blue">
             <!-- <h5 class="card-title">bada24</h5> -->
             <div class="row form-group">
               <div class="col pr-0">
                 <input
                   type="text"
                   name="Name"
-                  class="form-control"
+                  class="form-control border-color-d-blue"
                   placeholder="Nome"
                 />
               </div>
@@ -72,7 +77,7 @@
                 <input
                   type="text"
                   name="Surname"
-                  class="form-control"
+                  class="form-control border-color-d-blue"
                   placeholder="Cognome"
                 />
               </div>
@@ -83,7 +88,7 @@
                 name="Email"
                 id="email"
                 type="email"
-                class="form-control"
+                class="form-control border-color-d-blue"
                 aria-describedby="emailHelp"
                 placeholder="La tua email*"
                 required
@@ -114,7 +119,7 @@
                 Sono badante.
               </label>
             </div>
-            <button type="submit" class="btn btn-block btn-primary">
+            <button type="submit" class="btn btn-block btn-primary bg-color-d-blue border-color-d-blue">
               Iscriviti
             </button>
           </div>
