changing title meta tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="copyright" content="Filippo Fresilli">
 
     <!--====== Title ======-->
-    <title>bada24</title>
+    <title>bada24 - Assistente digitale per badanti, anziani e familiari.</title>
     <meta
       name="description"
       content="Bada24, assistente digitale per la ricerca e la gestione delle badanti."
