--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </header> -->
 
-      <main role="main" class="inner cover d-flex align-items-center">
+      <main role="main" class="inner cover align-items-center">
         <div class="p-3">
           <h1 class="cover-heading">bada24</h1>
           <h4>Bada24 è l'assistente digitale per badanti, anziani e familiari.</h4>
