--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           method="post"
         >
           <div class="card-body bg-color-card border-color-d-blue">
-            <!-- <h5 class="card-title">bada24</h5> -->
+            <h5 class="card-title">Interessato al progetto?</h5>
             <div class="row form-group">
               <div class="col pr-0">
                 <input
@@ -104,7 +104,7 @@
                 checked
               />
               <label class="form-check-label" for="exampleRadios1">
-                Ho bisogno di un/a badante.
+                Sono in cerca di badante.
               </label>
             </div>
             <div class="form-check form-group">
@@ -120,7 +120,7 @@
               </label>
             </div>
             <button type="submit" class="btn btn-block btn-primary bg-color-d-blue border-color-d-blue">
-              Iscriviti
+              Partecipa allo sviluppo
             </button>
           </div>
         </form>
