--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div
       class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column justify-content-center"
     >
+    <h1 class="cover-heading text-center">bada24</h1>
       <!-- <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">bada24</h3>
@@ -49,10 +50,9 @@
         </div>
       </header> -->
 
-      <main role="main" class="inner cover align-items-center">
-        <div class="p-3">
-          <h1 class="cover-heading">bada24</h1>
-          <h4>Bada24 è l'assistente digitale per badanti, anziani e familiari.</h4>
+      <main role="main" class="inner align-items-center bg-image-2">
+        <div class="p-3 col-sm-8">
+          <h4>Bada24 è lo strumento digitale per facilitare la collaborazione e il lavoro tra badanti e familiari.</h4>
           <p class="lead">
             Bada24 è l'assistente digitale per badanti, anziani e familiari.
           </p>
