--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="copyright" content="Filippo Fresilli">
 
     <!--====== Title ======-->
-    <title>bada24 - Assistente digitale per badanti, anziani e familiari.</title>
+    <title>bada24 - Applicazione gestionale per badanti, anziani e familiari.</title>
     <meta
       name="description"
-      content="Bada24, assistente digitale per la ricerca e la gestione delle badanti."
+      content="Bada24, applicazione gestionale per la ricerca, la gestione e la collaborazione tra badante e familiari."
     />
 
     <!--====== Favicon Icon ======-->
@@ -52,7 +52,7 @@
 
       <main role="main" class="inner align-items-center bg-image-40">
         <div class="p-3 col-sm-8">
-          <h4>Bada24 è lo strumento digitale per facilitare la collaborazione e il lavoro tra badanti e familiari.</h4>
+          <h4>Bada24 è l'applicazione gestionale per facilitare la collaborazione e il lavoro tra badanti e familiari.</h4>
           <p class="lead">
             Bada24 è l'assistente digitale per badanti, anziani e familiari.
           </p>
