--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <meta name="author" content="Filippo Fresilli">
-    <meta name="copyright" content="Filippo Fresilli">
+    <meta name="author" content="Filippo Fresilli" />
+    <meta name="copyright" content="Filippo Fresilli" />
 
     <!--====== Title ======-->
-    <title>bada24 - Applicazione gestionale per badanti, anziani e familiari.</title>
+    <title>
+      bada24 - Applicazione gestionale per badanti, anziani e familiari.
+    </title>
     <meta
       name="description"
       content="Bada24, applicazione gestionale per la ricerca, la gestione e la collaborazione tra badante e familiari."
@@ -32,14 +34,14 @@
       crossorigin="anonymous"
     />
 
-     <!--====== Style CSS ======-->
-     <link rel="stylesheet" type="text/css" href="style.css" />
+    <!--====== Style CSS ======-->
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body class="">
     <div
       class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column justify-content-center"
     >
-    <h1 class="cover-heading text-center">bada24</h1>
+      <h1 class="cover-heading text-center">Bada24</h1>
       <!-- <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">bada24</h3>
@@ -50,12 +52,23 @@
         </div>
       </header> -->
 
-      <main role="main" class="inner align-items-center bg-image-40">
+      <main role="main" class="inner align-items-center">
         <div class="p-3 col-sm-8">
-          <h4>Bada24 è l'applicazione gestionale per facilitare la collaborazione e il lavoro tra badanti e familiari.</h4>
-          <p class="lead">
-            Bada24 è l'assistente digitale per badanti, anziani e familiari.
-          </p>
+          <div class="">
+            <h3>
+            Bada24 é l'applicazione gestionale per facilitare la
+              collaborazione e il lavoro tra badanti e familiari.
+            </h3>
+            <p class="lead">
+              Compila il formulario per essere una delle prime persone a provare
+              l'app.
+            </p>
+          </div>
+          <div class="d-flex align-items-center justify-content-center">
+            
+            <img class="" src="assets/images/old_dancing_less_white.jpg" alt="anziani">
+         
+          </div>
         </div>
         <form
           class="card border-color-d-blue"
@@ -63,7 +76,9 @@
           method="post"
         >
           <div class="card-body bg-color-card border-color-d-blue">
-            <h5 class="card-title">Interessato al progetto?</h5>
+            <h5 class="card-title">
+              Ti piace il progetto? Provalo e dacci la tua opinione:
+            </h5>
             <div class="row form-group">
               <div class="col pr-0">
                 <input
@@ -116,11 +131,14 @@
                 value="badante"
               />
               <label class="form-check-label" for="exampleRadios2">
-                Sono badante.
+                Sono badante con più di 3 anni di esperienza.
               </label>
             </div>
-            <button type="submit" class="btn btn-block btn-primary bg-color-d-blue border-color-d-blue">
-              Partecipa allo sviluppo
+            <button
+              type="submit"
+              class="btn btn-block btn-primary bg-color-d-blue border-color-d-blue"
+            >
+              Conferma
             </button>
           </div>
         </form>
