--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--====== Title ======-->
     <title>
-      bada24 - Applicazione gestionale per badanti, anziani e familiari.
+      Bada24 - Applicazione gestionale per badanti, anziani e familiari.
     </title>
     <meta
       name="description"
@@ -41,7 +41,7 @@
     <div
       class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column justify-content-center"
     >
-      <h1 class="cover-heading text-center">Bada24</h1>
+      <!-- <h1 class="cover-heading text-center">Bada24</h1> -->
       <!-- <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">bada24</h3>
@@ -56,8 +56,8 @@
         <div class="p-3 col-sm-8">
           <div class="">
             <h3>
-            Bada24 é l'applicazione gestionale per facilitare la
-              collaborazione e il lavoro tra badanti e familiari.
+            <b>Bada24</b> é l'applicazione gestionale per facilitare la
+              collaborazione e il lavoro tra badanti e parenti degli anziani.
             </h3>
             <p class="lead">
               Compila il formulario per essere una delle prime persone a provare
