--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="">
             <h3>
             <b>Bada24</b> é l'applicazione gestionale per facilitare la
-              collaborazione e il lavoro tra badanti e parenti degli anziani.
+              collaborazione e il lavoro tra <b>badanti</b> e <b>parenti degli anziani</b>.
             </h3>
             <p class="lead">
               Compila il formulario per essere una delle prime persone a provare
@@ -76,9 +76,9 @@
           method="post"
         >
           <div class="card-body bg-color-card border-color-d-blue">
-            <h5 class="card-title">
-              Ti piace il progetto? Provalo e dacci la tua opinione:
-            </h5>
+            <h4 class="card-title">
+              Interessato al progetto? Provalo e dacci la tua opinione:
+            </h4>
             <div class="row form-group">
               <div class="col pr-0">
                 <input
