--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </header> -->
 
-      <main role="main" class="inner align-items-center">
+      <main class="inner align-items-center">
         <div class="p-3 col-sm-8">
           <div class="">
             <h3>
@@ -104,7 +104,6 @@
                 id="email"
                 type="email"
                 class="form-control border-color-d-blue"
-                aria-describedby="emailHelp"
                 placeholder="La tua email*"
                 required
               />
