--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="d-flex align-items-center justify-content-center">
             
-            <img class="" src="assets/images/old_dancing_less_white.jpg" alt="anziani">
+            <img class="" src="assets/images/old_dancing_less_tiny.png" alt="anziani">
          
           </div>
         </div>
