--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
     <meta name="author" content="Filippo Fresilli" />
     <meta name="copyright" content="Filippo Fresilli" />
-
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="it_IT">
+    <meta property="og:title" content="Bada24 - Applicazione gestionale per badanti, anziani e familiari.">
+    <meta property="og:url" content="https://bada24.it">
+    <meta property="og:site_name" content="Bada24">
+    
     <!--====== Title ======-->
     <title>
       Bada24 - Applicazione gestionale per badanti, anziani e familiari.
