--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Bada24 - Applicazione gestionale per badanti, anziani e familiari.">
     <meta property="og:url" content="https://bada24.it">
     <meta property="og:site_name" content="Bada24">
-    
+    <meta property="og:image:secure_url" content="old_dancing_less_tiny"/>
     <!--====== Title ======-->
     <title>
       Bada24 - Applicazione gestionale per badanti, anziani e familiari.
