--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:url" content="https://bada24.it">
     <meta property="og:site_name" content="Bada24">
     <meta property="og:image:secure_url" content="old_dancing_less_tiny"/>
+
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <!--====== Title ======-->
     <title>
       Bada24 - Applicazione gestionale per badanti, anziani e familiari.
